# django-template-project

./: .gitignore  .pylintrc  Makefile  README.md  createsuperuser.sh  lint.sh  makemigrations.bat  makemigrations.sh  migrate.sh  mypy.ini  pyproject.toml  requirements.txt  run.sh  setup.bat  template.config.yml
.github/workflows/: codeql-analysis.yml  ossar-analysis.yml  qodana.yml
database/: docker-compose.yml
requirements/: common.txt  dev.txt  production.txt
src/: check_config_vars.py  createsuperuser.py  manage.py  utils.py
src/administration/: admin.py  models.py
src/administration/migrations/: 0001_initial.py
src/common/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
src/common/migrations/: 0001_initial.py  0002_auto_20201225_1315.py  0003_example_image.py  0004_auto_20201225_1634.py  0005_auto_20210105_2146.py
src/main/: asgi.py  dashboard.py  urls.py  wsgi.py
src/main/settings/: base.py  common.py  dev.py  production.py
src/staticfiles/css/: custom.css
