[tool.poetry]
name = "django-template-project"
version = "0.1.0"
description = "A template to start hacking with Django"
authors = ["Dan Percic <danpercic86@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
psycopg2 = "^2.8.6"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.6.0"
Pillow = "^8.0.1"
django-admin-thumbnails = "^0.2.5"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
PyYAML = "^5.3.1"
docutils = "^0.16"
django-grappelli = "^2.14.3"
django-filebrowser = "^3.13.2"
django-model-utils = "^4.1.1"
drf-spectacular = "^0.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
pycodestyle = "^2.6.0"
django-querycount = "^0.7.0"
django-debug-toolbar = "^3.2"
nplusone = "^1.0.0"
django-extra-checks = "^0.8.0"

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
/(
    \.git
  | \__pycache__
  | \venv
  | \.venv
  | migrations
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
